# AKIRA

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/inputs/: schema.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
src/actuarial_model/: __init__.py
src/actuarial_model/api/: main.py
src/actuarial_model/api/routes/: __init__.py  assumptions.py  data.py  results.py  runs.py
src/actuarial_model/api/schemas/: __init__.py
src/actuarial_model/assets/: __init__.py  ledger.py  valuation.py
src/actuarial_model/assumptions/: __init__.py  enums.py  sets.py  validators.py
src/actuarial_model/capital/: __init__.py  ecr.py  rbc.py  stochastic.py
src/actuarial_model/core/: __init__.py  aggregation.py  discount.py  seriatim.py
src/actuarial_model/core/projections/: __init__.py  fia.py  myga.py  spia.py  ulsg.py  va.py
src/actuarial_model/models/: __init__.py  asset.py  policy.py  reinsurance.py  results.py  runs.py
src/actuarial_model/reinsurance/: __init__.py  application.py  coinsurance.py  excess_of_loss.py  funds_withheld.py  modco.py  quota_share.py  risk_transfer.py  yrt.py
src/actuarial_model/standards/: __init__.py  bel.py  ebs.py  fas157.py  ldti.py  stat_carvm.py  stat_vm22.py
src/actuarial_model/utils/: __init__.py  ids.py  logging_config.py
tests/: conftest.py  test_api_smoke.py
tests/test_assumptions/: test_assumptions_smoke.py
tests/test_capital/: test_capital_stubs.py
tests/test_core/: test_core_stubs.py
tests/test_models/: test_models_smoke.py
tests/test_reinsurance/: test_reinsurance_stubs.py
tests/test_standards/: test_standards_stubs.py
